[修改]1. 修改代码归属

--- a/Editor/GameFrameX.ObjectStorage.Editor.asmdef
+++ b/Editor/GameFrameX.ObjectStorage.Editor.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "GameFrameX.ObjectStorage.Editor",
     "references": [
         "GameFrameX.Editor",
-        "GameFrameX.Runtime",
-        "GameFrameX.ObjectStorage.Runtime"
+        "GameFrameX.Runtime"
     ],
     "includePlatforms": [
         "Editor"
